force-app/main/default/objects/Archived_Case__b/Archived_Case__b.object-meta.xml
<CustomObject>
    <label>Archived Case</label>
    <pluralLabel>Archived Cases</pluralLabel>
</CustomObject>