force-app/main/default/objects/Archived_Case__b/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>