force-app/main/default/objects/Archived_Case__b/fields/Date_Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Closed__c</fullName>
    <label>Date/Time Closed</label>
    <type>DateTime</type>
</CustomField>