force-app/main/default/objects/Archived_Case__b/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>